<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.joaoprg.ubereats.clone</groupId>
    <artifactId>uber-eats-clone</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <surefire.skipTests>false</surefire.skipTests>
        <maven.deploy.skip>true</maven.deploy.skip>
        <failOnChecks>false</failOnChecks>
        <java.version>17</java.version>
        <forceJavacCompilerUse>true</forceJavacCompilerUse>
        <maven.deploy.skip>false</maven.deploy.skip>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <timestamp>${maven.build.timestamp}</timestamp>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <lombok.version>1.18.26</lombok.version>
        <dependency.version.quarkus>2.16.6.Final</dependency.version.quarkus>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${dependency.version.quarkus}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>authentication</module>
        <module>marketplace</module>
        <module>order</module>
    </modules>

</project>